--- a/Billiards.UI/Views/CustomerManagementView.xaml
+++ b/Billiards.UI/Views/CustomerManagementView.xaml
@@ -81,7 +81,7 @@
 
                 <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right">
                     <Button x:Name="btnAddNew" 
-                            Content="Thêm mới" 
+                            Content="Làm mới" 
                             Width="110" 
                             Height="38" 
                             Margin="5,0" 
