--- a/Billiards.UI/Views/EmployeeManagementView.xaml
+++ b/Billiards.UI/Views/EmployeeManagementView.xaml
@@ -114,7 +114,7 @@
 
                             <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
                                 <Button x:Name="btnAddNewEmployee" 
-                                        Content="Thêm mới" 
+                                        Content="Làm mới" 
                                         Width="110" 
                                         Height="38" 
                                         Margin="5,0" 
@@ -238,7 +238,7 @@
 
                             <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Right">
                                 <Button x:Name="btnAddNewAccount" 
-                                        Content="Thêm mới" 
+                                        Content="Làm mới" 
                                         Width="110" 
                                         Height="38" 
                                         Margin="5,0" 
