--- a/Billiards.UI/Views/TableManagementView.xaml
+++ b/Billiards.UI/Views/TableManagementView.xaml
@@ -100,7 +100,7 @@
 
                             <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Right">
                                 <Button x:Name="btnAddNewTable" 
-                                        Content="Thêm mới" 
+                                        Content="Làm mới" 
                                         Width="110" 
                                         Height="38" 
                                         Margin="5,0" 
@@ -192,7 +192,7 @@
 
                             <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
                                 <Button x:Name="btnAddNewArea" 
-                                        Content="Thêm mới" 
+                                        Content="Làm mới" 
                                         Width="110" 
                                         Height="38" 
                                         Margin="5,0" 
@@ -284,7 +284,7 @@
 
                             <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
                                 <Button x:Name="btnAddNewTableType" 
-                                        Content="Thêm mới" 
+                                        Content="Làm mới" 
                                         Width="110" 
                                         Height="38" 
                                         Margin="5,0" 
